# CompMath_lb3

./: CMakeLists.txt
src/: main.c
src/methods/: bisection.c  bisection.h  definitions.h  newton.c  newton.h  secant.c  secant.h
src/util/: functions.c  functions.h
